// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-plugin-sitemap Node API should accept a custom query 1`] = `
Array [
  Object {
    "changefreq": "weekly",
    "priority": 0.8,
    "url": "http://dummy.url/page-1",
  },
]
`;

exports[`gatsby-plugin-sitemap Node API should succeed with default options 1`] = `
Array [
  Object {
    "changefreq": "daily",
    "priority": 0.7,
    "url": "http://dummy.url/page-1",
  },
  Object {
    "changefreq": "daily",
    "priority": 0.7,
    "url": "http://dummy.url/page-2",
  },
]
`;
